--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class="container">
   <h1>ITEM LIST APP</h1>
+      <p>Get organised and be more productive getting your most important tasks done.</p>
   
     <!--input-->
     <div class="inputcup">
